Added Logging Added default error Page Added Configuration for Logging